# Yuan

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  QWEN.md  README.md  test.yu  test_lsp.py
runtime/: CMakeLists.txt  yuan_async.cpp  yuan_ffi.cpp  yuan_format_typed.cpp  yuan_net.cpp  yuan_os.cpp  yuan_varargs.cpp
runtime/gui/: CMakeLists.txt  yuan_gui_abi.h  yuan_gui_linux.cpp  yuan_gui_macos.mm  yuan_gui_windows.cpp
src/: CMakeLists.txt
src/AST/: AST.cpp  ASTContext.cpp  ASTDumper.cpp  ASTPrinter.cpp  CMakeLists.txt  Decl.cpp  Expr.cpp  Pattern.cpp  Stmt.cpp  Type.cpp
src/Basic/: CMakeLists.txt  Diagnostic.cpp  DiagnosticIDs.cpp  SourceLocation.cpp  SourceManager.cpp  TextDiagnosticPrinter.cpp  TokenKinds.cpp  Version.cpp
src/Builtin/: AlignofBuiltin.cpp  AssertBuiltin.cpp  AsyncBuiltin.cpp  BuiltinRegistry.cpp  CMakeLists.txt  FFIBuiltin.cpp  FormatBuiltin.cpp  FormatBuiltin_v2.cpp  ImportBuiltin.cpp  LocationBuiltin.cpp  MemoryBuiltin.cpp  OSBuiltin.cpp  PanicBuiltin.cpp  PlatformBuiltin.cpp  PrintBuiltin.cpp  SizeofBuiltin.cpp  TypeofBuiltin.cpp
src/CodeGen/: CGDecl.cpp  CGExpr.cpp  CGStmt.cpp  CMakeLists.txt  CodeGen.cpp
src/Driver/: CMakeLists.txt  Driver.cpp  Options.cpp
src/Frontend/: CMakeLists.txt  CompilerInstance.cpp  CompilerInvocation.cpp  FrontendAction.cpp
src/Lexer/: CMakeLists.txt  Lexer.cpp  LiteralParser.cpp  Token.cpp
src/Parser/: CMakeLists.txt  ParseDecl.cpp  ParseDecl.cpp.bak  ParseExpr.cpp  ParsePattern.cpp  ParseStmt.cpp  ParseType.cpp  Parser.cpp
src/Sema/: CMakeLists.txt  ModuleManager.cpp  Scope.cpp  Sema.cpp  Symbol.cpp  Type.cpp  TypeChecker.cpp  TypeCodec.cpp
src/Tooling/: CMakeLists.txt  CompilerSession.cpp  ProjectConfig.cpp  ToolRunner.cpp
tests/spec2026/: CMakeLists.txt  README.md
tests/spec2026/cases/ch02_lexical/: 2_1_item__core_pass.yu  2_1_item__semantic_edge_fail.yu  2_1_item__syntax_edge_fail.yu  2_2_item__core_pass.yu  2_2_item__semantic_edge_fail.yu  2_2_item__syntax_edge_fail.yu  2_3_item__core_pass.yu  2_3_item__semantic_edge_fail.yu  2_3_item__syntax_edge_fail.yu  2_4_item__core_pass.yu  2_4_item__semantic_edge_fail.yu  2_4_item__syntax_edge_fail.yu  2_5_1_item__core_pass.yu  2_5_1_item__semantic_edge_fail.yu  2_5_1_item__syntax_edge_fail.yu  2_5_2_item__core_pass.yu  2_5_2_item__semantic_edge_fail.yu  2_5_2_item__syntax_edge_fail.yu  2_5_3_item__core_pass.yu  2_5_3_item__semantic_edge_fail.yu  2_5_3_item__syntax_edge_fail.yu  2_5_4_item__core_pass.yu  2_5_4_item__semantic_edge_fail.yu  2_5_4_item__syntax_edge_fail.yu  2_5_5_item__core_pass.yu  2_5_5_item__semantic_edge_fail.yu  2_5_5_item__syntax_edge_fail.yu  2_5_6_none__core_pass.yu  2_5_6_none__semantic_edge_fail.yu  2_5_6_none__syntax_edge_fail.yu  2_5_7_item__core_pass.yu  2_5_7_item__semantic_edge_fail.yu  2_5_7_item__syntax_edge_fail.yu  2_5_8_item__core_pass.yu  2_5_8_item__semantic_edge_fail.yu  2_5_8_item__syntax_edge_fail.yu  2_5_item__core_pass.yu  2_5_item__semantic_edge_fail.yu  2_5_item__syntax_edge_fail.yu  2_6_item__core_pass.yu  (+2 more)
tests/spec2026/cases/ch03_types/: 3_1_item__core_pass.yu  3_1_item__semantic_edge_fail.yu  3_1_item__syntax_edge_fail.yu  3_2_1_item__core_pass.yu  3_2_1_item__semantic_edge_fail.yu  3_2_1_item__syntax_edge_fail.yu  3_2_2_item__core_pass.yu  3_2_2_item__semantic_edge_fail.yu  3_2_2_item__syntax_edge_fail.yu  3_2_3_item__core_pass.yu  3_2_3_item__semantic_edge_fail.yu  3_2_3_item__syntax_edge_fail.yu  3_2_4_item__core_pass.yu  3_2_4_item__semantic_edge_fail.yu  3_2_4_item__syntax_edge_fail.yu  3_2_5_item__core_pass.yu  3_2_5_item__semantic_edge_fail.yu  3_2_5_item__syntax_edge_fail.yu  3_2_6_item__core_pass.yu  3_2_6_item__semantic_edge_fail.yu  3_2_6_item__syntax_edge_fail.yu  3_2_7_void__core_pass.yu  3_2_7_void__semantic_edge_fail.yu  3_2_7_void__syntax_edge_fail.yu  3_2_item__core_pass.yu  3_2_item__semantic_edge_fail.yu  3_2_item__syntax_edge_fail.yu  3_3_1_item__core_pass.yu  3_3_1_item__semantic_edge_fail.yu  3_3_1_item__syntax_edge_fail.yu  3_3_2_item__core_pass.yu  3_3_2_item__semantic_edge_fail.yu  3_3_2_item__syntax_edge_fail.yu  3_3_3_item__core_pass.yu  3_3_3_item__semantic_edge_fail.yu  3_3_3_item__syntax_edge_fail.yu  3_3_4_vec__core_pass.yu  3_3_4_vec__semantic_edge_fail.yu  3_3_4_vec__syntax_edge_fail.yu  3_3_5_item__core_pass.yu  (+26 more)
tests/spec2026/cases/ch04_expr/: 4_10_item__core_pass.yu  4_10_item__semantic_edge_fail.yu  4_10_item__syntax_edge_fail.yu  4_1_item__core_pass.yu  4_1_item__semantic_edge_fail.yu  4_1_item__syntax_edge_fail.yu  4_2_item__core_pass.yu  4_2_item__semantic_edge_fail.yu  4_2_item__syntax_edge_fail.yu  4_3_item__core_pass.yu  4_7_if__core_pass.yu  (+19 more)
tests/spec2026/helpers/: math.yu  models.yu
tests/spec2026/manifest/: spec2026_manifest.yaml  spec2026_schema.md  spec2026_xfail.yaml
tests/unit/AST/: ASTNodeTest.cpp  ASTPrinterTest.cpp  CMakeLists.txt
tests/unit/Basic/: CMakeLists.txt  DiagnosticPropertyTest.cpp  DiagnosticTest.cpp  SourceLocationPropertyTest.cpp  SourceLocationTest.cpp  SourceManagerTest.cpp  VersionTest.cpp
tests/unit/Builtin/: BuiltinRegistryTest.cpp  CMakeLists.txt
tests/unit/CodeGen/: CMakeLists.txt  CodeGenPropertyTest.cpp  DeclCodeGenTest.cpp  ErrorHandlingTest.cpp  GenericMonomorphTest.cpp  IREmissionTest.cpp  StmtCodeGenTest.cpp  TargetCodeGenTest.cpp  TypeConversionTest.cpp
tests/unit/Lexer/: CMakeLists.txt  LexerCommentPropertyTest.cpp  LexerErrorPropertyTest.cpp  LexerIdentifierPropertyTest.cpp  LexerNumberPropertyTest.cpp  LexerStringPropertyTest.cpp  LiteralParserTest.cpp  TokenTest.cpp
tests/unit/Parser/: CMakeLists.txt  ParseDeclTest.cpp  ParseErrorRecoveryPropertyTest.cpp  ParseExprOperatorPropertyTest.cpp  ParseExprTest.cpp  ParsePatternTest.cpp  ParseRoundTripPropertyTest.cpp  ParseStmtTest.cpp  ParseTypeTest.cpp
tests/unit/Sema/: CMakeLists.txt  GenericInstantiationTest.cpp  ModuleManagerTest.cpp  SymbolTablePropertyTest.cpp  SymbolTableTest.cpp  TypeCheckerTest.cpp  TypeTest.cpp
tools/yuan-analyze/: CMakeLists.txt  main.cpp
tools/yuan-format/: CMakeLists.txt  main.cpp
tools/yuanc/: CMakeLists.txt  main.cpp
(+514 files in other folders)
